--- a/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/model-training-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "37096455",
    "metadata": {},
    "outputs": [
@@ -2000,9 +2000,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_24344/1721790326.py:99: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_24344/3963020877.py:99: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model=torch.load(CKPT_PATH,map_location=DEVICE)\n",
-      "I0000 00:00:1745594483.809725  844114 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
+      "I0000 00:00:1745628420.290162  844114 gl_context.cc:369] GL version: 2.1 (2.1 Metal - 89.3), renderer: Apple M4 Max\n"
      ]
     },
     {
@@ -2018,34 +2018,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0000 00:00:1745594483.852598  848517 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1745594483.876707  848528 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "W0000 00:00:1745628420.332703  866414 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1745628420.354640  866421 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0 = webcam, or drop a video path)\n",
-      "Webcam FPS: 15.0\n",
-      "Frame interval: 1 (processing every 1th frame)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error: AudioFileOpen failed ('wht?')\n",
-      "Exception in thread Thread-11 (speak):\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/envs/rehabtrainingpy312/lib/python3.12/threading.py\", line 1075, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/opt/anaconda3/envs/rehabtrainingpy312/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 766, in run_closure\n",
-      "    _threading_Thread_run(self)\n",
-      "  File \"/opt/anaconda3/envs/rehabtrainingpy312/lib/python3.12/threading.py\", line 1012, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"/var/folders/pv/99z70cjs7t1dx16_0r1c33hw0000gn/T/ipykernel_24344/1721790326.py\", line 15, in speak\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'temp.mp3'\n"
+      "(0 = webcam, or drop a video path)\n"
      ]
     }
    ],
@@ -2066,8 +2047,8 @@
     "    os.system(\"afplay temp.mp3\")  # Use afplay on macOS to play the audio\n",
     "    os.remove(\"temp.mp3\")\n",
     "\n",
-    "def speak_async(text: str):\n",
-    "    threading.Thread(target=speak, args=(text,), daemon=True).start()\n",
+    "# def speak_async(text: str):\n",
+    "#     threading.Thread(target=speak, args=(text,), daemon=True).start()\n",
     "\n",
     "# ╭───────────────────────── CONSTANTS ─────────────────────────╮\n",
     "mp_pose = mp.solutions.pose\n",
@@ -2182,16 +2163,10 @@
     "    last_message = \"\"\n",
     "    user_ex_name = EXERCISE_MAP[user_ex_id]\n",
     "    cap = cv2.VideoCapture(video_src)\n",
-    "    if video_src==0:                       \n",
-    "        cap.set(cv2.CAP_PROP_FPS, 30)  # Attempt to set to 30 FPS\n",
-    "        webcam_fps = cap.get(cv2.CAP_PROP_FPS) or 30  # Fallback to 30 if not available\n",
-    "        print(f\"Webcam FPS: {webcam_fps}\")\n",
-    "        target_fps = 30\n",
-    "        frame_interval = max(1, round(webcam_fps / target_fps))  # Frames to skip\n",
-    "        print(f\"Frame interval: {frame_interval} (processing every {frame_interval}th frame)\")\n",
-    "    else:\n",
-    "        frame_interval = 1  # No skipping for video files (assumed 30 FPS)\n",
-    "    frame_count = 0\n",
+    "    if video_src==0:                       # webcam – resample to 30 fps\n",
+    "        src_fps=cap.get(cv2.CAP_PROP_FPS) or 30\n",
+    "        skip=max(1,round(src_fps/30))\n",
+    "    else: skip=1\n",
     "    buf=deque(maxlen=SEQ_LEN)\n",
     "    feedback    = \"Initialising…\"\n",
     "    suggestion  = \"\"\n",
@@ -2201,10 +2176,7 @@
     "        ok, frame = cap.read()\n",
     "        if not ok:                      # end-of-stream\n",
     "            break\n",
-    "        frame_count += 1\n",
-    "        if video_src == 0 and frame_count % frame_interval != 0:\n",
-    "            continue  # Skip this frame\n",
-    "        \n",
+    "        if video_src==0 and cap.get(cv2.CAP_PROP_POS_FRAMES)%skip: continue\n",
     "        rgb=cv2.cvtColor(frame,cv2.COLOR_BGR2RGB)\n",
     "        res=pose.process(rgb)\n",
     "        if res.pose_landmarks:   drawer.draw_landmarks(\n",
@@ -2271,7 +2243,7 @@
     "            else f\"{feedback}. {suggestion}\"\n",
     "        )\n",
     "        if message != last_message:\n",
-    "            speak_async(message)\n",
+    "            # speak_async(message)\n",
     "            last_message = message\n",
     "            \n",
     "        # ---------------- draw text ----------------------------------\n",
