--- a/dataprep_model-training_evaluation_Inference-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/dataprep_model-training_evaluation_Inference-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "37096455",
    "metadata": {},
    "outputs": [
@@ -3225,7 +3225,7 @@
     "                            suggestion = \"Check your form.\"\n",
     "                        warn_ctr = 30                    # show for ~1 s\n",
     "            else:\n",
-    "                feedback=f\"Analysing {len(buf)}/{SEQ_LEN}\"\n",
+    "                feedback=f\"Analysing...\"\n",
     "                suggestion=\"\"\n",
     "\n",
     "        # ─ speak any change ───────────────────────────────────────\n",
