--- a/dataprep_model-training_evaluation_Inference-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
+++ b/dataprep_model-training_evaluation_Inference-scripts/model_training_keypoint_based_with_window_and_feedback.ipynb
@@ -3196,7 +3196,7 @@
     "                # mismatch branch ------------------------------------------------\n",
     "                if ex_pred != user_ex_id:\n",
     "                    pred_name = EXERCISE_MAP.get(ex_pred, f\"Ex {ex_pred}\")\n",
-    "                    feedback = f\"Wrong exercise! It looks like you're doing {pred_name}.\"\n",
+    "                    feedback = f\"Wrong exercise! \\nIt looks like you're doing {pred_name}.\"\n",
     "                    suggestion=\"\";  warn_ctr=0\n",
     "                else:\n",
     "                    if q_pred==1:\n",
