--- a/dataprep_model-training_evaluation_Inference-scripts/model_training_evaluation_and_Inference.ipynb
+++ b/dataprep_model-training_evaluation_Inference-scripts/model_training_evaluation_and_Inference.ipynb
@@ -1939,7 +1939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "37096455",
    "metadata": {},
    "outputs": [
@@ -3196,7 +3196,7 @@
     "                # mismatch branch ------------------------------------------------\n",
     "                if ex_pred != user_ex_id:\n",
     "                    pred_name = EXERCISE_MAP.get(ex_pred, f\"Ex {ex_pred}\")\n",
-    "                    feedback = f\"Wrong exercise! It looks like you're doing {pred_name}.\"\n",
+    "                    feedback = f\"Wrong exercise! \\nIt looks like you're doing {pred_name}.\"\n",
     "                    suggestion=\"\";  warn_ctr=0\n",
     "                else:\n",
     "                    if q_pred==1:\n",
@@ -3225,7 +3225,7 @@
     "                            suggestion = \"Check your form.\"\n",
     "                        warn_ctr = 30                    # show for ~1 s\n",
     "            else:\n",
-    "                feedback=f\"Analysing {len(buf)}/{SEQ_LEN}\"\n",
+    "                feedback=f\"Analysing..\"\n",
     "                suggestion=\"\"\n",
     "\n",
     "        # ─ speak any change ───────────────────────────────────────\n",
