--- a/dataprep_model-training_evaluation_Inference-scripts/model_training_evaluation_and_Inference.ipynb
+++ b/dataprep_model-training_evaluation_Inference-scripts/model_training_evaluation_and_Inference.ipynb
@@ -2619,7 +2619,7 @@
     "    elif ex_id == 4:  # Leg-abduction\n",
     "        req = {\"LEFT_HIP\", \"RIGHT_HIP\", \"SPINE\", \"LEFT_KNEE\", \"RIGHT_KNEE\"}\n",
     "    elif ex_id == 5:  # Lunge\n",
-    "        req = {\"LEFT_HIP\", \"RIGHT_HIP\", \"LEFT_KNEE\", \"RIGHT_KNEE\", \"LEFT_ANKLE\", \"RIGHT_ANKLE\"}\n",
+    "        req = {\"LEFT_HIP\", \"RIGHT_HIP\", \"LEFT_KNEE\", \"RIGHT_KNEE\",}\n",
     "    else:\n",
     "        req = set(JOINT_TRIPLETS.keys())  # For other exercises, still use ALL\n",
     "    idx=set(); [idx.update(JOINT_TRIPLETS[j]) for j in req]\n",
