--- a/Documentation/Project Report/Project Peport (latex)/references.bib
+++ b/Documentation/Project Report/Project Peport (latex)/references.bib
@@ -9,6 +9,17 @@
   doi       = {10.2196/59755}
 }
 
+@article{faber2015homeexercise,
+  author       = {Faber, M. and Andersen, M. H. and Sevel, C. and Thorborg, K. and Bandholm, T. and Rathleff, M.},
+  title        = {The majority are not performing home-exercises correctly two weeks after their initial instruction—an assessor-blinded study},
+  journal      = {PeerJ},
+  volume       = {3},
+  pages        = {e1102},
+  year         = {2015},
+  doi          = {10.7717/peerj.1102},
+  url          = {https://doi.org/10.7717/peerj.1102}
+}
+
 @article{Xing2025,
   author    = {Feng Xing and Juan Liu and Chang Mei and Jingnan Chen and Yi Wen and Jianrong Zhou and Shiqi Xie},
   title     = {{Adherence to rehabilitation exercise and influencing factors among people with acute stroke: a cross-sectional study}},
@@ -17,17 +28,6 @@
   pages     = {1554949},
   year      = {2025},
   doi       = {10.3389/fneur.2025.1554949}
-}
-
-@article{Velez2023,
-  author    = {Marcela Velez and Luz Helena Lugo-Agudelo and Daniel F. Pati{\~n}o Lugo and Claire Glenton and Ana M. Posada and Luisa F. Mesa Franco and \textit{et al.}},
-  title     = {{Factors that influence the provision of home-based rehabilitation services for people needing rehabilitation: a qualitative evidence synthesis}},
-  journal   = {Cochrane Database of Systematic Reviews},
-  volume    = {2023},
-  number    = {2},
-  pages     = {CD014823},
-  year      = {2023},
-  doi       = {10.1002/14651858.CD014823}
 }
 
 @article{Abedi2024,
@@ -83,15 +83,20 @@
   url = {https://arxiv.org/abs/1906.08172}
 }
 
-@inproceedings{cernek2024rehab,
-  author    = {Andrej {\v{C}}ernek and Jan Sedmidubsky and Petra Budikova
-               and Miriama J\'ano\v{s}ov\'a and Luk\'a\v{s} Katzer
-               and Michal Proch\'azka},
-  title     = {REHAB24-6: Physical Therapy Dataset for Analyzing Pose
-               Estimation Methods},
-  booktitle = {Proc.\ 17th Int.\ Conf.\ on Similarity Search and Applications (SISAP)},
-  year      = {2024},
-  pages     = {1--14}
+@inproceedings{cernek2024rehab24,
+  author       = {Andrej {\v{C}}ernek and Jan Sedmidubsky and Petra Bud\'ikov\'a
+                  and Miriama J\'ano\v{s}ov\'a and Luk\'a\v{s} Katzer
+                  and Michal Proch\'azka},
+  title        = {{REHAB24-6}: Physical Therapy Dataset for Analyzing Pose Estimation Methods},
+  booktitle    = {Proceedings of the 17th International Conference on Similarity Search and Applications (SISAP 2024)},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14512},             % if Springer has assigned one; else omit
+  pages        = {18--33},
+  publisher    = {Springer},
+  address      = {Cham},
+  year         = {2024},
+  doi          = {10.1007/978-3-031-75823-2\_2},
+  url          = {https://doi.org/10.1007/978-3-031-75823-2_2}
 }
 
 @article{McGinley2009Reliability,
